# University

./: .gitignore
APS/: 01introduc.tex  02Planejamento.tex  03Analise.tex  04Projeto.tex  2024EricHoffmann-EstudioDeCinema.aux  2024EricHoffmann-EstudioDeCinema.bbl  2024EricHoffmann-EstudioDeCinema.blg  2024EricHoffmann-EstudioDeCinema.brf  2024EricHoffmann-EstudioDeCinema.fdb_latexmk  2024EricHoffmann-EstudioDeCinema.fls  2024EricHoffmann-EstudioDeCinema.ilg  2024EricHoffmann-EstudioDeCinema.tex  2024EricHoffmann-EstudioDeCinema.toc  APS.bib  conclusao.tex  lista.md  structure.tex
APS/ppt/: capa.pptx
ComputerArchitecture/2048-V/: main.asm
ComputerArchitecture/2048-V/macros/: add_score.asm  convert.asm  count.asm  init.asm  input.asm  macros.asm  (+18 more)
ComputerArchitecture/Risc-V/: do_while_fibonacci.asm  fibo.asm  for_fibonacci.asm  print.asm  switch.asm  while_fibonacci.asm
DataStructures1/O-lytics/: README.md
DataStructures1/O-lytics/src/: CMakeLists.txt  exampleFunc.h
DataStructures1/O-lytics/src/modules/: CMakeLists.txt  obase.c  probe.c
DataStructures1/O-lytics/src/modules/obase/: obase.h
DataStructures1/O-lytics/src/modules/probe/: probe.h
DigitalLogic/: README.md
DigitalLogic/src/: README.md
Paradigms/Book/: 01introduc.tex  02basicos.tex  03Program.tex  04aplic.tex  05ferramentas.tex  06conclusao.tex  Rust.aux  Rust.bbl  Rust.bib  Rust.blg  Rust.brf  Rust.listing  Rust.tex  Rust.toc  ficha.tex  fontes  structure.tex
Paradigms/Java/: Calculadora.java  Carro.java  EquacaoLinear.java  EquacaoQuadratica.java  MediaNotas.java  SomaInteiros.java
(+777 files in other folders)
